name:               line2pdf
version:            0.0.11
copyright:          2008 Audrey Tang
license:            BSD3
license-file:       LICENSE
author:             Audrey Tang <audreyt@audreyt.org>
maintainer:         dburke@cfa.harvard.edu
synopsis:           Simple command-line utility to convert text into PDF
description:        Simple command-line utility to convert text into PDF
stability:          experimental
build-type:         Simple
cabal-version:      >= 1.2
category:           Text
extra-source-files: README
Tested-With:        GHC==7.0.4

library
    exposed-modules: Text.LineToPDF Text.LineToPDF.Internals
    build-depends: base >= 3,
                   containers >= 0.3 && < 0.5,
                   bytestring >= 0.9 && < 1.0,
                   cmdargs >= 0.9 && < 1.0
    hs-source-dirs:     src
    ghc-options:       -Wall

executable line2pdf
    main-is:        line2pdf.hs
    build-depends: base >= 3,
                   containers >= 0.3 && < 0.5,
                   bytestring >= 0.9 && < 1.0,
                   cmdargs >= 0.9 && < 1.0
    hs-source-dirs:     . src
    Other-Modules:  Paths_line2pdf
    ghc-options:       -Wall
